# send-money-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: logging_config.py  server.py
app/static/: index.html
docs/: ARCHITECTURE.md  TESTING_SUITE.md
send_money_agent/: agent.py  data.py  tools.py
tests/: test_data.py  test_scenarios.py  test_tools.py
